--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Hero Section -->
     <section class="hero" id="about">
       <img
-        src="assets/images/wfh_1.svg"
+        src="assets/images/illustration.svg"
         alt="Genzo-Graphics"
         loading="lazy"
         class="hero-img"
