--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <!-- Primary Meta Tags -->
+    <title>Genzo</title>
+    <meta name="title" content="Eagle - Official Website">
+    <meta name="description" content="Hey there, I am a freelance Graphic Designer and Digital Artist from Uttar Pradesh, India with a creative mind.I love to create characters from my imagination and wants to learn more and more things.">
+    <meta name="theme-color" content="#E72221">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.genzographics.tk/">
+    <meta property="og:title" content="Genzo Graphics">
+    <meta property="og:description" content="Hey there, I am a freelance Graphic Designer and Digital Artist from Uttar Pradesh, India with a creative mind.I love to create characters from my imagination and wants to learn more and more things.">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/935175988634087495/937313556330852472/Untitled95_20220130171905.png?width=434&height=434">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.genzographics.tk/">
+    <meta property="twitter:title" content="Genzo Graphics">
+    <meta property="twitter:description" content="Hey there, I am Eagle a frontend as well as backend developer. I am still learning new ways to create effective projects. I have knowledge of Html, Css and JavaScript and Nodejs and currently practicing projects on android.">
+    <meta property="twitter:image" content="https://media.discordapp.net/attachments/878983470888669245/917414015553138798/logo.jpg">
 
     <!--CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -49,7 +65,7 @@
     <!-- Hero Section -->
     <section class="hero" id="about">
       <img
-        src="assets/images/illustration.svg"
+        src="assets/images/art.svg"
         alt="Genzo-Graphics"
         loading="lazy"
         class="hero-img"
@@ -167,7 +183,7 @@
 
     <!-- Contact section -->
     <section class="contact" id="contact">
-      <h2 style="color:#3B3B3B;">Get In Touch With Me</h2>
+      <h2 style="color:#3B3B3B;">Contact ME Me</h2>
       <div class="contact-form-container">
         <div class="contact-form">
           <form action="https://formspree.io/f/mknyjogr" method="POST">
@@ -232,6 +248,13 @@
           loading="lazy"
           class="socicon"
       /></a>
+      <a href="https://www.artstation.com/genzographics8" target="_blank"
+        ><img
+          src="assets/icons/artstation.gif"
+          alt="Artstation"
+          loading="lazy"
+          class="socicon"
+      /></a>
       <!-- <a href="https://instagram.com/" target="_blank"
         ><img
           src="assets/icons/icons8-linkedin-circled.gif"
@@ -239,9 +262,9 @@
           loading="lazy"
           class="socicon"
       /></a> -->
-       <a href="https://github.com/Arya0077" target="_blank"
+       <!--<a href="https://github.com/Arya0077" target="_blank"
         ><img src="assets/icons/icons8-github.gif" alt="Github" class="socicon"
-      /></a>
+      /></a> -->
     </div> 
 
     <!-- Scroll to top -->
